--- a/VGApp/Base.lproj/Main.storyboard
+++ b/VGApp/Base.lproj/Main.storyboard
@@ -28,10 +28,10 @@
             </objects>
             <point key="canvasLocation" x="-71" y="122"/>
         </scene>
-        <!--View Controller-->
+        <!--Itemview-->
         <scene sceneID="OYv-pr-41m">
             <objects>
-                <viewController id="Kf3-Jy-aHb" sceneMemberID="viewController">
+                <viewController restorationIdentifier="Itemview" storyboardIdentifier="Itemview" id="Kf3-Jy-aHb" customClass="Itemview" customModule="VGApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="diQ-dm-egJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
